fix: bring back editor translations

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -65,28 +65,42 @@
   "The report is loading...": "The report is loading...",
   "Appears on the cards": "Appears on the cards",
   "Once you replace the URL it will apply on each of the following cards:": "Once you replace the URL it will apply on each of the following cards:",
+  "Feedback": "Feedback",
+  "Poll": "Poll",
+  "Subscribe": "Subscribe",
+  "Invalid URL": "Invalid URL",
+  "Start a Conversation": "Start a Conversation",
+  "Link to Bible": "Link to Bible",
+  "Navigate to": "Navigate to",
   "What are Goals?": "What are Goals?",
   "Depending on the link you provide for the actions, the target of your Journey will be determined automatically from the following list:": "Depending on the link you provide for the actions, the target of your Journey will be determined automatically from the following list:",
+  "If the goal is to go any chat platform": "If the goal is to go any chat platform",
+  "Visit a Website": "Visit a Website",
+  "This could be your church or ministry website, or whatever you want to redirect the viewer to.": "This could be your church or ministry website, or whatever you want to redirect the viewer to.",
+  "If the target of the journey is to download the Bible": "If the target of the journey is to download the Bible",
+  "Information": "Information",
   "Learn More": "Learn More",
   "Every Journey has a goal": "Every Journey has a goal",
   "On this screen you will see all your goals and actions listed in a single table. Create cards with some actions like buttons. We will list all your links and actions here so you can:": "On this screen you will see all your goals and actions listed in a single table. Create cards with some actions like buttons. We will list all your links and actions here so you can:",
+  "Check all URLs and actions used in the journey": "Check all URLs and actions used in the journey",
+  "Assign a goal to each action and monitor it": "Assign a goal to each action and monitor it",
+  "Change all URLs in a single place": "Change all URLs in a single place",
+  "Goal Details": "Goal Details",
   "The Journey Goals": "The Journey Goals",
   "You can change them to your own clicking on the rows of this table": "You can change them to your own clicking on the rows of this table",
-  "Information": "Information",
   "Target and Action": "Target and Action",
   "Appears on": "Appears on",
   "cards": "cards",
   "card": "card",
-  "Start a Conversation": "Start a Conversation",
-  "Link to Bible": "Link to Bible",
-  "Visit a Website": "Visit a Website",
+  "<0>Appears on <2>{{ count }}</2> card</0>_one": "<0>Appears on <2>{{ count }}</2> card</0>",
+  "<0>Appears on <2>{{ count }}</2> card</0>_other": "<0>Appears on <2>{{ count }}</2> cards</0>",
   "Next Card Properties": "Next Card Properties",
   "Hosted By": "Hosted By",
   "Card Templates": "Card Templates",
   "Fill this card with content": "Fill this card with content",
-  "Select Card Template": "Select Card Template",
-  "or add blocks from the list below ⤵": "or add blocks from the list below ⤵",
+  "<0>Select Card Template</0><1>or add blocks from the list below ⤵</1>": "<0>Select Card Template</0><1>or add blocks from the list below ⤵</1>",
   "Edit text...": "Edit text...",
+  "Type your text here...": "Type your text here...",
   "Add New Option": "Add New Option",
   "Add your text here...": "Add your text here...",
   "Properties": "Properties",
@@ -114,25 +128,59 @@
   "The Bible Says:": "The Bible Says:",
   "Blessed are the peacemakers, for they shall be called sons of God.": "Blessed are the peacemakers, for they shall be called sons of God.",
   "– Jesus Christ": "– Jesus Christ",
+  "None": "None",
+  "Next Step": "Next Step",
+  "Selected Card": "Selected Card",
+  "URL/Website": "URL/Website",
   "Navigate to:": "Navigate to:",
   "Redirect user to the selected resource": "Redirect user to the selected resource",
+  "Invalid Email": "Invalid Email",
+  "Email must be a valid email": "Email must be a valid email",
+  "Paste Email here...": "Paste Email here...",
+  "Paste URL here...": "Paste URL here...",
   "Default Next Step defined in the current card settings.": "Default Next Step defined in the current card settings.",
+  "Select the Journey...": "Select the Journey...",
   "Card": "Card",
-  "Subscribe": "Subscribe",
-  "Feedback": "Feedback",
-  "Poll": "Poll",
   "Poll Option": "Poll Option",
   "Editing {{block}} Properties": "Editing {{block}} Properties",
+  "Action": "Action",
+  "Color": "Color",
+  "Background Color": "Background Color",
+  "Button Color": "Button Color",
+  "Button Size": "Button Size",
+  "Variant": "Variant",
+  "Button Variant": "Button Variant",
+  "Leading Icon": "Leading Icon",
+  "Trailing Icon": "Trailing Icon",
+  "Primary": "Primary",
+  "Secondary": "Secondary",
+  "Error": "Error",
+  "Small": "Small",
+  "Medium": "Medium",
+  "Large": "Large",
+  "Contained": "Contained",
+  "Text": "Text",
   "Palette": "Palette",
   "Custom": "Custom",
   "Video": "Video",
   "Image": "Image",
-  "Expanded": "Expanded",
-  "Contained": "Contained",
-  "Card Layout": "Card Layout",
+  "Video Updated": "Video Updated",
+  "Background Media": "Background Media",
+  "Background Color Properties": "Background Color Properties",
+  "Background": "Background",
+  "Background Image": "Background Image",
+  "Background Video": "Background Video",
+  "Style": "Style",
   "Default": "Default",
   "Light": "Light",
   "Dark": "Dark",
+  "Card Styling": "Card Styling",
+  "Card Style Property": "Card Style Property",
+  "Layout": "Layout",
+  "Expanded": "Expanded",
+  "Content Appearance": "Content Appearance",
+  "Card Layout Property": "Card Layout Property",
+  "Card Layout": "Card Layout",
   "Card Style": "Card Style",
   "Facebook Messenger": "Facebook Messenger",
   "WhatsApp": "WhatsApp",
@@ -154,7 +202,6 @@
   "Vk": "Vk",
   "Line": "Line",
   "and": "and",
-  "None": "None",
   "Host's name": "Host's name",
   "Chat Widget": "Chat Widget",
   "Chat Platform": "Chat Platform",
@@ -162,10 +209,12 @@
   "Create Author": "Create Author",
   "Clear": "Clear",
   "Edits: Making changes here will apply to all journeys that share this Host.": "Edits: Making changes here will apply to all journeys that share this Host.",
+  "Location": "Location",
+  "Please enter a host name": "Please enter a host name",
+  "Host Name": "Host Name",
   "Select a Host": "Select a Host",
   "Cannot edit hosts for this old journey": "Cannot edit hosts for this old journey",
-  "Only": "Only",
-  "members can edit this": "members can edit this",
+  "Only {{ title }} members can edit this": "Only {{ title }} members can edit this",
   "Authors": "Authors",
   "Create New": "Create New",
   "Why does your journey need a host?": "Why does your journey need a host?",
@@ -176,23 +225,39 @@
   "Click here for formium docs on finding your api token": "Click here for formium docs on finding your api token",
   "Form Slug": "Form Slug",
   "Project Id": "Project Id",
-  "Action": "Action",
   "Credentials": "Credentials",
   "Complete": "Complete",
   "Incomplete": "Incomplete",
   "Formium Credentials": "Formium Credentials",
+  "Image Source": "Image Source",
+  "Image Options": "Image Options",
+  "Form Submission": "Form Submission",
+  "Button Icon": "Button Icon",
   "Cards": "Cards",
   "Conditions": "Conditions",
+  "Lock the next step": "Lock the next step",
+  "Prevent skipping of current card": "Prevent skipping of current card",
   "User can't skip interaction on the current card, like watching video or interacting with questions.": "User can't skip interaction on the current card, like watching video or interacting with questions.",
   "Selected Step": "Selected Step",
   "Locked With Interaction": "Locked With Interaction",
   "Default next step in journey": "Default next step in journey",
   "No next step in journey": "No next step in journey",
+  "Next Card": "Next Card",
+  "Unlocked Card": "Unlocked Card",
+  "Feedback Properties": "Feedback Properties",
+  "Hint": "Hint",
+  "Label": "Label",
   "One Row": "One Row",
   "Two Rows": "Two Rows",
   "Three Rows": "Three Rows",
   "Four Rows": "Four Rows",
   "Minimum Size": "Minimum Size",
+  "Left": "Left",
+  "Center": "Center",
+  "Right": "Right",
+  "Text Variant": "Text Variant",
+  "Text Color": "Text Color",
+  "Text Alignment": "Text Alignment",
   "Header 1": "Header 1",
   "Header 2": "Header 2",
   "Header 3": "Header 3",
@@ -205,10 +270,32 @@
   "Body 2": "Body 2",
   "Caption": "Caption",
   "Overline": "Overline",
-  "Color": "Color",
+  "Video Source": "Video Source",
+  "Video Options": "Video Options",
+  "Arrow Right": "Arrow Right",
+  "Arrow Left": "Arrow Left",
+  "Been Here": "Been Here",
+  "Chat Bubble": "Chat Bubble",
+  "Check Circle": "Check Circle",
+  "Chevron Right": "Chevron Right",
+  "Chevron Left": "Chevron Left",
+  "Contact Support": "Contact Support",
+  "Format Quote": "Format Quote",
+  "Live Tv": "Live Tv",
+  "Lock Open": "Lock Open",
+  "Menu Book": "Menu Book",
+  "Play Arrow": "Play Arrow",
+  "Radio Button Uncheked": "Radio Button Uncheked",
+  "Send": "Send",
+  "Subscription": "Subscription",
+  "Translate": "Translate",
+  "Select an icon...": "Select an icon...",
   "Move Up or Down": "Move Up or Down",
   "Select a Block to Insert": "Select a Block to Insert",
+  "Button": "Button",
   "Form": "Form",
+  "Option 1": "Option 1",
+  "Option 2": "Option 2",
   "Social Share Preview": "Social Share Preview",
   "Journey": "Journey",
   "Blocks cannot be placed on top of Video Block": "Blocks cannot be placed on top of Video Block",
@@ -216,50 +303,105 @@
   "Add": "Add",
   "Edit": "Edit",
   "Done": "Done",
-  "Social Image": "Social Image",
-  "Are you sure you would like to delete this card?": "Are you sure you would like to delete this card?",
-  "Edit Journey Actions": "Edit Journey Actions",
-  "Preview": "Preview",
-  "Template Settings": "Template Settings",
-  "Title": "Title",
+  "Character limit reached": "Character limit reached",
   "Description": "Description",
+  "Recommended length: up to 18 words": "Recommended length: up to 18 words",
+  "Social Image": "Social Image",
+  "Title": "Title",
+  "Recommended length: 5 words": "Recommended length: 5 words",
+  "Analytics": "Analytics",
+  "Block Deleted": "Block Deleted",
+  "Card Deleted": "Card Deleted",
+  "Delete Card?": "Delete Card?",
+  "Delete": "Delete",
+  "Cancel": "Cancel",
+  "Are you sure you would like to delete this card?": "Are you sure you would like to delete this card?",
+  "Delete {{ label }}": "Delete {{ label }}",
+  "{{ blockLabel }} Duplicated": "{{ blockLabel }} Duplicated",
+  "Duplicate {{ blockLabel }}": "Duplicate {{ blockLabel }}",
+  "Preview": "Preview",
+  "Link Copied": "Link Copied",
+  "Copy Link": "Copy Link",
+  "Create Template": "Create Template",
+  "Field update failed. Reload the page or try again.": "Field update failed. Reload the page or try again.",
+  "Edit Description": "Edit Description",
+  "There was an error updating language": "There was an error updating language",
+  "Edit Language": "Edit Language",
+  "Language": "Language",
+  "Template Settings": "Template Settings",
   "Public information about a person or a team created this journey": "Public information about a person or a team created this journey",
   "Creator's Info": "Creator's Info",
   "Embed web link from Google Slides or Canva": "Embed web link from Google Slides or Canva",
+  "Add {{ tagLabel }}": "Add {{ tagLabel }}",
   "Recommended length: six words or shorter": "Recommended length: six words or shorter",
   "Publicly visible on template details page": "Publicly visible on template details page",
   "RTL languages will change the journey flow": "RTL languages will change the journey flow",
   "Featured": "Featured",
   "Invalid embed link": "Invalid embed link",
   "Template settings have been saved": "Template settings have been saved",
-  "Cancel": "Cancel",
   "Metadata": "Metadata",
   "Categories": "Categories",
   "About": "About",
+  "Edit Title": "Edit Title",
+  "Something went wrong, please try again!": "Something went wrong, please try again!",
   "Prompt must be at least one character": "Prompt must be at least one character",
   "Prompt": "Prompt",
   "Add image by URL": "Add image by URL",
   "Paste URL of image...": "Paste URL of image...",
   "Make sure image address is permanent": "Make sure image address is permanent",
+  "Uploading...": "Uploading...",
+  "Upload successful!": "Upload successful!",
+  "Upload Failed!": "Upload Failed!",
+  "Drop an image here": "Drop an image here",
+  "Something went wrong, try again": "Something went wrong, try again",
+  "Max file size: 10 MB": "Max file size: 10 MB",
   "Upload file": "Upload file",
+  "Please enter a valid url": "Please enter a valid url",
   "Gallery": "Gallery",
+  "AI": "AI",
+  "Christ": "Christ",
+  "Church": "Church",
+  "Prayer": "Prayer",
+  "Bible": "Bible",
+  "Freedom": "Freedom",
+  "Help": "Help",
+  "Love": "Love",
+  "Friendship": "Friendship",
+  "Loneliness": "Loneliness",
+  "Nature": "Nature",
+  "Joy": "Joy",
+  "Depression": "Depression",
   "Unsplash": "Unsplash",
   "Featured Images": "Featured Images",
   "Load More": "Load More",
+  "Search by keyword": "Search by keyword",
+  "Image is uploading...": "Image is uploading...",
+  "Selected Image": "Selected Image",
+  "Select Image": "Select Image",
+  "Upload failed": "Upload failed",
+  "No Image Selected": "No Image Selected",
+  "{{ width }} x {{ height }} pixels": "{{ width }} x {{ height }} pixels",
   "Change": "Change",
   "Access Control": "Access Control",
-  "Embed Journey": "Embed Journey",
+  "Code Copied": "Code Copied",
+  "Embed journey": "Embed journey",
+  "Copy Code": "Copy Code",
   "Show Preview": "Show Preview",
   "By embedding a Journey to your site, you agree to the ": "By embedding a Journey to your site, you agree to the ",
   "Terms of agreement": "Terms of agreement",
   "Journey URL": "Journey URL",
   "Edit URL": "Edit URL",
-  "Field update failed. Reload the page or try again.": "Field update failed. Reload the page or try again.",
+  "Embed Journey": "Embed Journey",
   "Messaging App View": "Messaging App View",
   "Social App View": "Social App View",
   "Cover Image": "Cover Image",
   "Appears while video is loading": "Appears while video is loading",
+  "Start time has to be at least 3 seconds less than end time": "Start time has to be at least 3 seconds less than end time",
+  "Start time has to be at least 3 seconds less than video duration {{ time }}": "Start time has to be at least 3 seconds less than video duration {{ time }}",
+  "End time has to be no more than video duration {{ time }}": "End time has to be no more than video duration {{ time }}",
   "Timing": "Timing",
+  "Starts At": "Starts At",
+  "Ends At": "Ends At",
   "Aspect ratio": "Aspect ratio",
   "This option is not available for YouTube videos": "This option is not available for YouTube videos",
   "Fill": "Fill",
@@ -271,14 +413,14 @@
   "Video always muted on the first card": "Video always muted on the first card",
   "Select Video": "Select Video",
   "Custom Video": "Custom Video",
+  "{{ language }} ({{ nativeLanguage }})": "{{ language }} ({{ nativeLanguage }})",
   "YouTube": "YouTube",
+  "Less": "Less",
+  "More": "More",
   "Video Details": "Video Details",
   "Change Video": "Change Video",
-  "Uploading...": "Uploading...",
   "Processing...": "Processing...",
-  "Upload Failed!": "Upload Failed!",
   "Drop a video here": "Drop a video here",
-  "Something went wrong, try again": "Something went wrong, try again",
   "Invalid file type. ": "Invalid file type. ",
   "Only one file upload at once. ": "Only one file upload at once. ",
   "File is too large. Max size is 1 GB.": "File is too large. Max size is 1 GB.",
@@ -286,9 +428,15 @@
   "Select": "Select",
   "Jesus Film Library": "Jesus Film Library",
   "Featured Videos": "Featured Videos",
+  "Paste any YouTube Link": "Paste any YouTube Link",
   "Available Languages": "Available Languages",
   "Apply": "Apply",
   "Video Library": "Video Library",
+  "Library": "Library",
+  "Upload": "Upload",
+  "No Results Found": "No Results Found",
+  "No More Videos": "No More Videos",
+  "Search by title in JF Library": "Search by title in JF Library",
   "Journeys Archived": "Journeys Archived",
   "Journeys Trashed": "Journeys Trashed",
   "No journeys to display.": "No journeys to display.",
@@ -325,7 +473,6 @@
   "Access": "Access",
   "Journey Deleted": "Journey Deleted",
   "Delete Forever?": "Delete Forever?",
-  "Delete": "Delete",
   "Are you sure you would like to delete the journey immediately? You will not be able to undo or restore these journeys.": "Are you sure you would like to delete the journey immediately? You will not be able to undo or restore these journeys.",
   "Journey Duplicated": "Journey Duplicated",
   "Journey Copied": "Journey Copied",
@@ -500,7 +647,6 @@
   "Form submitted:": "Form submitted:",
   "Sign Up Submission": "Sign Up Submission",
   "Skip Step:": "Skip Step:",
-  "Next Step": "Next Step",
   "Video Start": "Video Start",
   "Video Play": "Video Play",
   "Video Pause": "Video Pause",
@@ -508,8 +654,6 @@
   "Video Progress {{ progress }}%": "Video Progress {{ progress }}%",
   "Video expanded to fullscreen at ({{ position }})": "Video expanded to fullscreen at ({{ position }})",
   "Video completed": "Video completed",
-  "Next Card": "Next Card",
-  "Selected Card": "Selected Card",
   "ID": "ID",
   "Last Active": "Last Active",
   "User Data": "User Data",
