feat: email unsubscribe frontend

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -1,6 +1,13 @@
 {
   "%s | Next Steps": "%s | Next Steps",
   "Admin | Next Steps": "Admin | Next Steps",
+  "Email Preferences Updated.": "Email Preferences Updated.",
+  "Email Preferences": "Email Preferences",
+  "Stop All Notifications": "Stop All Notifications",
+  "Stop all current and future email notifications.": "Stop all current and future email notifications.",
+  "Account Notifications": "Account Notifications",
+  "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.",
+  "Done": "Done",
   "Journeys": "Journeys",
   "Create a New Journey": "Create a New Journey",
   "Request Access": "Request Access",
@@ -302,7 +309,6 @@
   "Blocks": "Blocks",
   "Add": "Add",
   "Edit": "Edit",
-  "Done": "Done",
   "Character limit reached": "Character limit reached",
   "Description": "Description",
   "Recommended length: up to 18 words": "Recommended length: up to 18 words",
