--- a/libs/locales/tl-PH/apps-journeys-admin.json
+++ b/libs/locales/tl-PH/apps-journeys-admin.json
@@ -1,6 +1,13 @@
 {
   "%s | Next Steps": "%s | ",
   "Admin | Next Steps": "Admin | ",
+  "Email Preferences Updated.": "Email Preferences Updated.",
+  "Email Preferences": "Email Preferences",
+  "Stop All Notifications": "Stop All Notifications",
+  "Stop all current and future email notifications.": "Stop all current and future email notifications.",
+  "Account Notifications": "Account Notifications",
+  "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.",
+  "Done": "Tapos na",
   "Journeys": "Mga paglalakbay",
   "Create a New Journey": "Gumawa ng Bagong Paglalakbay",
   "Request Access": "Humiling ng Access",
@@ -300,7 +307,6 @@
   "Blocks": "Mga bloke",
   "Add": "Idagdag",
   "Edit": "I-edit",
-  "Done": "Tapos na",
   "Character limit reached": "Character limit reached",
   "Description": "Paglalarawan",
   "Recommended length: up to 18 words": "Recommended length: up to 18 words",
