--- a/libs/locales/ru-RU/apps-journeys-admin.json
+++ b/libs/locales/ru-RU/apps-journeys-admin.json
@@ -1,6 +1,13 @@
 {
   "%s | Next Steps": "%s | ",
   "Admin | Next Steps": "Админ | ",
+  "Email Preferences Updated.": "Обновлены настройки электронной почты.",
+  "Email Preferences": "Предпочтения электронной почты",
+  "Stop All Notifications": "Останови все уведомления",
+  "Stop all current and future email notifications.": "Останови все текущие и будущие уведомления по электронной почте.",
+  "Account Notifications": "Уведомления о счетах",
+  "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "Отправляй по электронной почте сообщения о новых участниках твоих команд, приглашенных в команду, о том, что с тобой поделились путешествием, о запросах на доступ к путешествию и об удалении из команды.",
+  "Done": "Сделанный",
   "Journeys": "Путешествия",
   "Create a New Journey": "Создать новое путешествие",
   "Request Access": "Запрос доступа",
@@ -300,7 +307,6 @@
   "Blocks": "Блоки",
   "Add": "Добавлять",
   "Edit": "Редактировать",
-  "Done": "Сделанный",
   "Character limit reached": "Лимит символов достигнут",
   "Description": "Описание",
   "Recommended length: up to 18 words": "Рекомендуемая длина: до 18 слов",
