chore: new translations apps-journeys-admin.json Chinese Simplified

--- a/libs/locales/zh-CN/apps-journeys-admin.json
+++ b/libs/locales/zh-CN/apps-journeys-admin.json
@@ -1,6 +1,13 @@
 {
   "%s | Next Steps": "%s |",
   "Admin | Next Steps": "管理员 |",
+  "Email Preferences Updated.": "电子邮件首选项已更新。",
+  "Email Preferences": "电子邮件首选项",
+  "Stop All Notifications": "停止所有通知",
+  "Stop all current and future email notifications.": "停止所有当前和未来的电子邮件通知。",
+  "Account Notifications": "账户通知",
+  "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "关于团队新成员、受邀加入团队、与您共享旅程、旅程访问请求以及从团队中删除的电子邮件更新。",
+  "Done": "完毕",
   "Journeys": "旅程",
   "Create a New Journey": "开创新征程",
   "Request Access": "申请进入",
@@ -300,7 +307,6 @@
   "Blocks": "积木",
   "Add": "添加",
   "Edit": "编辑",
-  "Done": "完毕",
   "Character limit reached": "字符数已达上限",
   "Description": "描述",
   "Recommended length: up to 18 words": "建议长度：不超过 18 个字",
