chore: new translations apps-journeys-admin.json Chinese Traditional

--- a/libs/locales/zh-TW/apps-journeys-admin.json
+++ b/libs/locales/zh-TW/apps-journeys-admin.json
@@ -1,6 +1,13 @@
 {
   "%s | Next Steps": "%s |",
   "Admin | Next Steps": "管理員 |",
+  "Email Preferences Updated.": "Email Preferences Updated.",
+  "Email Preferences": "Email Preferences",
+  "Stop All Notifications": "Stop All Notifications",
+  "Stop all current and future email notifications.": "Stop all current and future email notifications.",
+  "Account Notifications": "Account Notifications",
+  "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.",
+  "Done": "完畢",
   "Journeys": "旅程",
   "Create a New Journey": "開創新征程",
   "Request Access": "申請進入",
@@ -300,7 +307,6 @@
   "Blocks": "積木",
   "Add": "添加",
   "Edit": "編輯",
-  "Done": "完畢",
   "Character limit reached": "Character limit reached",
   "Description": "描述",
   "Recommended length: up to 18 words": "Recommended length: up to 18 words",
