chore: new translations apps-journeys-admin.json French

--- a/libs/locales/fr-FR/apps-journeys-admin.json
+++ b/libs/locales/fr-FR/apps-journeys-admin.json
@@ -1,6 +1,13 @@
 {
   "%s | Next Steps": "%s | Les prochaines étapes",
   "Admin | Next Steps": "Admin | Prochaines étapes",
+  "Email Preferences Updated.": "Préférences de messagerie mises à jour.",
+  "Email Preferences": "Préférences de courrier électronique",
+  "Stop All Notifications": "Arrêter toutes les notifications",
+  "Stop all current and future email notifications.": "Arrête toutes les notifications par courriel actuelles et futures.",
+  "Account Notifications": "Notifications de compte",
+  "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "Mets-toi au courant par courriel des nouveaux membres de tes équipes, des personnes invitées dans une équipe, des voyages partagés avec toi, des demandes d'accès aux voyages et des personnes retirées d'une équipe.",
+  "Done": "Fait",
   "Journeys": "Voyages",
   "Create a New Journey": "Crée un nouveau voyage",
   "Request Access": "Demande d'accès",
@@ -300,7 +307,6 @@
   "Blocks": "Blocs",
   "Add": "Ajouter",
   "Edit": "Éditer",
-  "Done": "Fait",
   "Character limit reached": "Limite de caractères atteinte",
   "Description": "Description",
   "Recommended length: up to 18 words": "Longueur recommandée : jusqu'à 18 mots",
