chore: new translations apps-journeys-admin.json Spanish

--- a/libs/locales/es-ES/apps-journeys-admin.json
+++ b/libs/locales/es-ES/apps-journeys-admin.json
@@ -1,6 +1,13 @@
 {
   "%s | Next Steps": "%s | Próximos pasos",
   "Admin | Next Steps": "Admin | Próximos pasos",
+  "Email Preferences Updated.": "Preferencias de correo electrónico Actualizadas.",
+  "Email Preferences": "Preferencias de correo electrónico",
+  "Stop All Notifications": "Detener todas las notificaciones",
+  "Stop all current and future email notifications.": "Detén todas las notificaciones por correo electrónico actuales y futuras.",
+  "Account Notifications": "Notificaciones de la cuenta",
+  "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "Actualiza por correo electrónico los nuevos miembros de tus equipos, los invitados a un equipo, los trayectos compartidos contigo, las solicitudes de acceso a trayectos y los eliminados de un equipo.",
+  "Done": "Hecho",
   "Journeys": "Viajes",
   "Create a New Journey": "Crea un nuevo viaje",
   "Request Access": "Solicitar acceso",
@@ -300,7 +307,6 @@
   "Blocks": "Bloquea",
   "Add": "Añade",
   "Edit": "Edita",
-  "Done": "Hecho",
   "Character limit reached": "Límite de caracteres alcanzado",
   "Description": "Descripción",
   "Recommended length: up to 18 words": "Longitud recomendada: hasta 18 palabras",
