chore: new translations apps-journeys-admin.json Japanese

--- a/libs/locales/ja-JP/apps-journeys-admin.json
+++ b/libs/locales/ja-JP/apps-journeys-admin.json
@@ -1,6 +1,13 @@
 {
   "%s | Next Steps": "%s | 次のステップ",
   "Admin | Next Steps": "管理者｜次のステップ",
+  "Email Preferences Updated.": "Eメール設定を更新しました。",
+  "Email Preferences": "メール設定",
+  "Stop All Notifications": "すべての通知を停止する",
+  "Stop all current and future email notifications.": "現在および将来のすべての電子メール通知を停止します。",
+  "Account Notifications": "アカウント通知",
+  "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "チームへの新メンバー、チームへの招待、ジャーニーの共有、ジャーニーへのアクセスリクエスト、チームからの脱退に関する最新情報をメールでお知らせします。",
+  "Done": "完了",
   "Journeys": "旅",
   "Create a New Journey": "新しい旅を創造する",
   "Request Access": "アクセスをリクエストする",
@@ -300,7 +307,6 @@
   "Blocks": "ブロック",
   "Add": "追加",
   "Edit": "編集",
-  "Done": "完了",
   "Character limit reached": "文字数制限に達した",
   "Description": "説明",
   "Recommended length: up to 18 words": "推奨される長さ：18ワードまで",
