chore: new translations apps-journeys-admin.json Turkish

--- a/libs/locales/tr-TR/apps-journeys-admin.json
+++ b/libs/locales/tr-TR/apps-journeys-admin.json
@@ -1,6 +1,13 @@
 {
   "%s | Next Steps": "%s | Sonraki Adımlar",
   "Admin | Next Steps": "Yönetici | Sonraki Adımlar",
+  "Email Preferences Updated.": "E-posta Tercihleri Güncellendi.",
+  "Email Preferences": "E-posta Tercihleri",
+  "Stop All Notifications": "Tüm Bildirimleri Durdur",
+  "Stop all current and future email notifications.": "Mevcut ve gelecekteki tüm e-posta bildirimlerini durdurun.",
+  "Account Notifications": "Hesap Bildirimleri",
+  "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "Ekiplerinize yeni üyeler, bir ekibe davet edilenler, sizinle paylaşılan yolculuklar, yolculuk erişim talepleri ve bir ekipten çıkarılanlar hakkında e-posta güncellemeleri.",
+  "Done": "Bitti",
   "Journeys": "Yolculuklar",
   "Create a New Journey": "Yeni Bir Yolculuk Yaratın",
   "Request Access": "Erişim Talebi",
@@ -300,7 +307,6 @@
   "Blocks": "Bloklar",
   "Add": "Ekle",
   "Edit": "Düzenle",
-  "Done": "Bitti",
   "Character limit reached": "Karakter sınırına ulaşıldı",
   "Description": "Açıklama",
   "Recommended length: up to 18 words": "Önerilen uzunluk: 18 kelimeye kadar",
