chore: new translations apps-journeys-admin.json Indonesian

--- a/libs/locales/id-ID/apps-journeys-admin.json
+++ b/libs/locales/id-ID/apps-journeys-admin.json
@@ -1,6 +1,13 @@
 {
   "%s | Next Steps": "%s | Langkah Selanjutnya",
   "Admin | Next Steps": "Admin | Langkah Selanjutnya",
+  "Email Preferences Updated.": "Preferensi Email Diperbarui.",
+  "Email Preferences": "Preferensi Email",
+  "Stop All Notifications": "Hentikan Semua Pemberitahuan",
+  "Stop all current and future email notifications.": "Hentikan semua notifikasi email saat ini dan yang akan datang.",
+  "Account Notifications": "Pemberitahuan Akun",
+  "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "Pembaruan email tentang anggota baru ke tim Anda, diundang ke tim, perjalanan yang dibagikan kepada Anda, permintaan akses perjalanan, dan dihapus dari tim.",
+  "Done": "Selesai.",
   "Journeys": "Perjalanan",
   "Create a New Journey": "Buat Perjalanan Baru",
   "Request Access": "Minta Akses",
@@ -300,7 +307,6 @@
   "Blocks": "Blok",
   "Add": "Menambahkan",
   "Edit": "Sunting",
-  "Done": "Selesai.",
   "Character limit reached": "Batas karakter tercapai",
   "Description": "Deskripsi",
   "Recommended length: up to 18 words": "Panjang yang disarankan: hingga 18 kata",
