--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -520,6 +520,9 @@
   "0 min": "0 min",
   "sec": "sec",
   "min": "min",
+  "Change Language": "Change Language",
+  "Revert": "Revert",
+  "Are you sure you want to change language?": "Are you sure you want to change language?",
   "Reports": "Reports",
   "See all": "See all",
   "Help us serve you better": "Help us serve you better",
@@ -539,7 +542,6 @@
   "You must get permission from the user before impersonating them. Unauthorized access to a user's data may be illegal and punishable by law in some juristictions.": "You must get permission from the user before impersonating them. Unauthorized access to a user's data may be illegal and punishable by law in some juristictions.",
   "Impersonation sessions last one hour. However, you should sign out from their account ASAP.": "Impersonation sessions last one hour. However, you should sign out from their account ASAP.",
   "User Email Address": "User Email Address",
-  "Logout": "Logout",
   "Logout successful": "Logout successful",
   "New Editing Request": "New Editing Request",
   "New Journey": "New Journey",
