chore: new translations apps-journeys-admin.json French

--- a/libs/locales/fr-FR/apps-journeys-admin.json
+++ b/libs/locales/fr-FR/apps-journeys-admin.json
@@ -518,6 +518,9 @@
   "0 min": "0 min",
   "sec": "sec",
   "min": "min",
+  "Change Language": "Changer de langue",
+  "Revert": "Revenir en arrière",
+  "Are you sure you want to change language?": "Es-tu sûr de vouloir changer de langue ?",
   "Reports": "Rapports",
   "See all": "Voir tous",
   "Help us serve you better": "Aide-nous à mieux te servir",
@@ -537,7 +540,6 @@
   "You must get permission from the user before impersonating them. Unauthorized access to a user's data may be illegal and punishable by law in some juristictions.": "Tu dois obtenir la permission de l'utilisateur avant de te faire passer pour lui. L'accès non autorisé aux données d'un utilisateur peut être illégal et puni par la loi dans certaines juridictions.",
   "Impersonation sessions last one hour. However, you should sign out from their account ASAP.": "Les sessions d'usurpation d'identité durent une heure. Cependant, tu dois te déconnecter de leur compte dès que possible.",
   "User Email Address": "Adresse électronique de l'utilisateur",
-  "Logout": "Déconnexion",
   "Logout successful": "Déconnexion réussie",
   "New Editing Request": "Nouvelle demande d'édition",
   "New Journey": "Nouveau voyage",
