chore: new translations apps-journeys-admin.json Spanish

--- a/libs/locales/es-ES/apps-journeys-admin.json
+++ b/libs/locales/es-ES/apps-journeys-admin.json
@@ -518,6 +518,9 @@
   "0 min": "0 min",
   "sec": "sec",
   "min": "min",
+  "Change Language": "Cambiar idioma",
+  "Revert": "Revertir",
+  "Are you sure you want to change language?": "¿Estás seguro de que quieres cambiar de idioma?",
   "Reports": "Informes",
   "See all": "Ver todo",
   "Help us serve you better": "Ayúdanos a servirte mejor",
@@ -537,7 +540,6 @@
   "You must get permission from the user before impersonating them. Unauthorized access to a user's data may be illegal and punishable by law in some juristictions.": "Debes obtener permiso del usuario antes de suplantar su identidad. El acceso no autorizado a los datos de un usuario puede ser ilegal y estar penado por la ley en algunas jurisdicciones.",
   "Impersonation sessions last one hour. However, you should sign out from their account ASAP.": "Las sesiones de suplantación duran una hora. Sin embargo, debes salir de su cuenta lo antes posible.",
   "User Email Address": "Dirección de correo electrónico del usuario",
-  "Logout": "Cerrar sesión",
   "Logout successful": "Cierre de sesión correcto",
   "New Editing Request": "Nueva solicitud de edición",
   "New Journey": "Nuevo viaje",
