chore: new translations apps-journeys-admin.json Tagalog

--- a/libs/locales/tl-PH/apps-journeys-admin.json
+++ b/libs/locales/tl-PH/apps-journeys-admin.json
@@ -518,6 +518,9 @@
   "0 min": "0 min",
   "sec": "sec",
   "min": "min",
+  "Change Language": "Change Language",
+  "Revert": "Revert",
+  "Are you sure you want to change language?": "Are you sure you want to change language?",
   "Reports": "Mga ulat",
   "See all": "Ipakita lahat",
   "Help us serve you better": "Tulungan kaming paglingkuran ka ng mas mahusay",
@@ -537,7 +540,6 @@
   "You must get permission from the user before impersonating them. Unauthorized access to a user's data may be illegal and punishable by law in some juristictions.": "Dapat kang makakuha ng pahintulot mula sa user bago siya gayahin. ",
   "Impersonation sessions last one hour. However, you should sign out from their account ASAP.": "Tumatagal ng isang oras ang mga session ng pagpapanggap. ",
   "User Email Address": "Email Address ng User",
-  "Logout": "Logout",
   "Logout successful": "Matagumpay ang pag-logout",
   "New Editing Request": "Bagong Kahilingan sa Pag-edit",
   "New Journey": "Bagong Paglalakbay",
