chore: new translations apps-journeys-admin.json Russian

--- a/libs/locales/ru-RU/apps-journeys-admin.json
+++ b/libs/locales/ru-RU/apps-journeys-admin.json
@@ -518,6 +518,9 @@
   "0 min": "0 мин",
   "sec": "сек",
   "min": "мин",
+  "Change Language": "Изменить язык",
+  "Revert": "Реверс",
+  "Are you sure you want to change language?": "Ты уверен, что хочешь сменить язык?",
   "Reports": "Отчеты",
   "See all": "Увидеть все",
   "Help us serve you better": "Помогите нам лучше обслуживать вас",
@@ -537,7 +540,6 @@
   "You must get permission from the user before impersonating them. Unauthorized access to a user's data may be illegal and punishable by law in some juristictions.": "Вы должны получить разрешение от пользователя, прежде чем выдавать себя за него. ",
   "Impersonation sessions last one hour. However, you should sign out from their account ASAP.": "Сеансы олицетворения длятся один час. ",
   "User Email Address": "Адрес электронной почты пользователя",
-  "Logout": "Выход из системы",
   "Logout successful": "Выход выполнен успешно",
   "New Editing Request": "Новый запрос на редактирование",
   "New Journey": "Новое путешествие",
