chore: new translations apps-journeys-admin.json Chinese Simplified

--- a/libs/locales/zh-CN/apps-journeys-admin.json
+++ b/libs/locales/zh-CN/apps-journeys-admin.json
@@ -518,6 +518,9 @@
   "0 min": "0分钟",
   "sec": "秒",
   "min": "分钟",
+  "Change Language": "更改语言",
+  "Revert": "返回",
+  "Are you sure you want to change language?": "您确定要更换语言吗？",
   "Reports": "报告",
   "See all": "查看全部",
   "Help us serve you better": "帮助我们更好地为您服务",
@@ -537,7 +540,6 @@
   "You must get permission from the user before impersonating them. Unauthorized access to a user's data may be illegal and punishable by law in some juristictions.": "在冒充用户之前，您必须获得用户的许可。",
   "Impersonation sessions last one hour. However, you should sign out from their account ASAP.": "模拟会话持续一小时。",
   "User Email Address": "用户电子邮件地址",
-  "Logout": "注销",
   "Logout successful": "注销成功",
   "New Editing Request": "新的编辑请求",
   "New Journey": "新征程",
