chore: new translations apps-journeys-admin.json Chinese Traditional

--- a/libs/locales/zh-TW/apps-journeys-admin.json
+++ b/libs/locales/zh-TW/apps-journeys-admin.json
@@ -518,6 +518,9 @@
   "0 min": "0分鐘",
   "sec": "秒",
   "min": "分分鐘",
+  "Change Language": "Change Language",
+  "Revert": "Revert",
+  "Are you sure you want to change language?": "Are you sure you want to change language?",
   "Reports": "報告",
   "See all": "看全部",
   "Help us serve you better": "幫助我們更好地為您服務",
@@ -537,7 +540,6 @@
   "You must get permission from the user before impersonating them. Unauthorized access to a user's data may be illegal and punishable by law in some juristictions.": "在冒充使用者之前，您必須獲得使用者的許可。",
   "Impersonation sessions last one hour. However, you should sign out from their account ASAP.": "模擬會話持續一小時。",
   "User Email Address": "使用者電子郵件地址",
-  "Logout": "Logout",
   "Logout successful": "註銷成功",
   "New Editing Request": "新的編輯請求",
   "New Journey": "新旅程",
