chore: new translations apps-journeys-admin.json Japanese

--- a/libs/locales/ja-JP/apps-journeys-admin.json
+++ b/libs/locales/ja-JP/apps-journeys-admin.json
@@ -518,6 +518,9 @@
   "0 min": "0分",
   "sec": "秒",
   "min": "分",
+  "Change Language": "言語の変更",
+  "Revert": "復帰",
+  "Are you sure you want to change language?": "本当に言語を変更したいのですか？",
   "Reports": "レポート",
   "See all": "すべて見る",
   "Help us serve you better": "より良いサービスを提供するために",
@@ -537,7 +540,6 @@
   "You must get permission from the user before impersonating them. Unauthorized access to a user's data may be illegal and punishable by law in some juristictions.": "ユーザーになりすます前に、必ず本人の許可を得てください。ユーザーのデータへの不正アクセスは、法律によっては違法となり処罰される場合があります。",
   "Impersonation sessions last one hour. However, you should sign out from their account ASAP.": "なりすましセッションは1時間。ただし、早急に相手のアカウントからサインアウトしてください。",
   "User Email Address": "ユーザーメールアドレス",
-  "Logout": "ログアウト",
   "Logout successful": "ログアウト成功",
   "New Editing Request": "新規編集リクエスト",
   "New Journey": "新しい旅",
