chore: new translations apps-journeys-admin.json Turkish

--- a/libs/locales/tr-TR/apps-journeys-admin.json
+++ b/libs/locales/tr-TR/apps-journeys-admin.json
@@ -518,6 +518,9 @@
   "0 min": "0 dakika",
   "sec": "sn",
   "min": "min",
+  "Change Language": "Dil Değiştir",
+  "Revert": "Geri Dön",
+  "Are you sure you want to change language?": "Dili değiştirmek istediğinizden emin misiniz?",
   "Reports": "Raporlar",
   "See all": "Tümünü görün",
   "Help us serve you better": "Size daha iyi hizmet vermemize yardımcı olun",
@@ -537,7 +540,6 @@
   "You must get permission from the user before impersonating them. Unauthorized access to a user's data may be illegal and punishable by law in some juristictions.": "Kullanıcıyı taklit etmeden önce ondan izin almalısınız. Bir kullanıcının verilerine izinsiz erişim yasadışı olabilir ve bazı hukuk sistemlerinde kanunen cezalandırılabilir.",
   "Impersonation sessions last one hour. However, you should sign out from their account ASAP.": "Taklit oturumları bir saat sürer. Ancak, hesaplarından en kısa sürede çıkış yapmalısınız.",
   "User Email Address": "Kullanıcı E-posta Adresi",
-  "Logout": "Oturumu Kapat",
   "Logout successful": "Çıkış başarılı",
   "New Editing Request": "Yeni Düzenleme Talebi",
   "New Journey": "Yeni Yolculuk",
