chore: new translations apps-journeys-admin.json Indonesian

--- a/libs/locales/id-ID/apps-journeys-admin.json
+++ b/libs/locales/id-ID/apps-journeys-admin.json
@@ -518,6 +518,9 @@
   "0 min": "0 menit",
   "sec": "detik",
   "min": "min",
+  "Change Language": "Ubah Bahasa",
+  "Revert": "Kembalikan",
+  "Are you sure you want to change language?": "Apakah Anda yakin ingin mengubah bahasa?",
   "Reports": "Laporan",
   "See all": "Lihat semua",
   "Help us serve you better": "Bantu kami melayani Anda dengan lebih baik",
@@ -537,7 +540,6 @@
   "You must get permission from the user before impersonating them. Unauthorized access to a user's data may be illegal and punishable by law in some juristictions.": "Anda harus mendapatkan izin dari pengguna sebelum menyamar sebagai mereka. Akses tanpa izin ke data pengguna dapat dianggap ilegal dan dapat dihukum oleh hukum di beberapa wilayah hukum.",
   "Impersonation sessions last one hour. However, you should sign out from their account ASAP.": "Sesi peniruan berlangsung selama satu jam. Namun, Anda harus keluar dari akun mereka secepatnya.",
   "User Email Address": "Alamat Email Pengguna",
-  "Logout": "Keluar",
   "Logout successful": "Logout berhasil",
   "New Editing Request": "Permintaan Pengeditan Baru",
   "New Journey": "Perjalanan Baru",
