--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -8,13 +8,6 @@
   "Account Notifications": "Account Notifications",
   "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.",
   "Done": "Done",
-  "Email Preferences Updated.": "Email Preferences Updated.",
-  "Email Preferences": "Email Preferences",
-  "Stop All Notifications": "Stop All Notifications",
-  "Stop all current and future email notifications.": "Stop all current and future email notifications.",
-  "Account Notifications": "Account Notifications",
-  "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.",
-  "Done": "Done",
   "Journeys": "Journeys",
   "Create a New Journey": "Create a New Journey",
   "Request Access": "Request Access",
@@ -51,6 +44,7 @@
   "Code": "Code",
   "Validate Email": "Validate Email",
   "Logout": "Logout",
+  "Manage Access": "Manage Access",
   "You can't edit this journey": "You can't edit this journey",
   "Send an access request to the creator of this journey": "Send an access request to the creator of this journey",
   "Wait for Approval": "Wait for Approval",
@@ -73,7 +67,6 @@
   "Users invited by link will request approval.": "Users invited by link will request approval.",
   "Please enter a valid email address": "Please enter a valid email address",
   "This email is already on the list": "This email is already on the list",
-  "Email": "Email",
   "New users get access instantly.": "New users get access instantly.",
   "Approve": "Approve",
   "Promote": "Promote",
@@ -455,6 +448,11 @@
   "Available Languages": "Available Languages",
   "Apply": "Apply",
   "Video Library": "Video Library",
+  "Library": "Library",
+  "Upload": "Upload",
+  "No Results Found": "No Results Found",
+  "No More Videos": "No More Videos",
+  "Search by title in JF Library": "Search by title in JF Library",
   "Please verify your email": "Please verify your email",
   "You need to verify your email before you can continue.": "You need to verify your email before you can continue.",
   "Send verification email": "Send verification email",
